@@ -1,7 +1,7 @@
 /* Jim - A small embeddable Tcl interpreter
  * Copyright 2005 Salvatore Sanfilippo <antirez@invece.org>
  *
- * $Id: jim.c,v 1.119 2005/03/18 09:36:26 antirez Exp $
+ * $Id: jim.c,v 1.120 2005/03/18 11:39:10 antirez Exp $
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -9512,7 +9512,7 @@ static int Jim_SetrefCoreCommand(Jim_Interp *interp, int argc,
     Jim_IncrRefCount(argv[2]);
     Jim_DecrRefCount(interp, refPtr->objPtr);
     refPtr->objPtr = argv[2];
-    Jim_SetResult(interp, argv[1]);
+    Jim_SetResult(interp, argv[2]);
     return JIM_OK;
 }
 
@@ -10158,7 +10158,7 @@ int Jim_InteractivePrompt(Jim_Interp *interp)
     printf("Welcome to Jim version %d.%d, "
            "Copyright (c) 2005 Salvatore Sanfilippo\n",
            JIM_VERSION / 100, JIM_VERSION % 100);
-    printf("CVS ID: $Id: jim.c,v 1.119 2005/03/18 09:36:26 antirez Exp $\n");
+    printf("CVS ID: $Id: jim.c,v 1.120 2005/03/18 11:39:10 antirez Exp $\n");
     Jim_SetVariableStrWithStr(interp, "jim_interactive", "1");
     while (1) {
         char buf[1024];
